Closed
Bug 1214277
Opened 10 years ago
Closed 10 years ago
Devtools "Disable cache" setting breaks interception in non-e10s mode
Categories
(Core :: DOM: Service Workers, defect)
Core
DOM: Service Workers
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: ehsan.akhgari, Unassigned)
References
Details
Attachments
(1 file)
STR:
1. Create a new profile, and run Firefox using it, and open a non-e10s window.
2. Go to <https://marcoscaceres.github.io/sw-workshop/finished/>. Disable your network connection. Reload. Everything works.
3. Open devtools, go to Settings, and check "Disable cache (when toolbox is open)".
4. Reload (still with the network connection disabled.) The interception doesn't work.
tracking-e10s:
--- → -
Reporter | ||
Comment 1•10 years ago
|
||
Attachment #8673372 -
Flags: review?(mcmanus)
Updated•10 years ago
|
Attachment #8673372 -
Flags: review?(mcmanus) → review+
Reporter | ||
Comment 2•10 years ago
|
||
Comment on attachment 8673372 [details] [diff] [review]
Avoid bypassing opening a cache entry for possibly intercepted channels
Review of attachment 8673372 [details] [diff] [review]:
-----------------------------------------------------------------
Michael, do you mind taking a look at this too? I was thinking about this patch yesterday, specifically about what it could possibly break that I need to test, and I can't really say for sure, so I'd appreciate a second opinion as well. :-)
Thanks!
Attachment #8673372 -
Flags: review?(michal.novotny)
Reporter | ||
Comment 3•10 years ago
|
||
Ping?
Reporter | ||
Comment 4•10 years ago
|
||
I guess I'll land this, and address any comments post landing. It's better to land sooner to see if it breaks something.
Comment 6•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment 7•10 years ago
|
||
Comment on attachment 8673372 [details] [diff] [review]
Avoid bypassing opening a cache entry for possibly intercepted channels
Sorry for the delay. Looks good to me, but I'd like Honza to have a look at it too, because he knows this code best.
Flags: needinfo?(honzab.moz)
Attachment #8673372 -
Flags: review?(michal.novotny) → review+
![]() |
||
Comment 8•10 years ago
|
||
Comment on attachment 8673372 [details] [diff] [review]
Avoid bypassing opening a cache entry for possibly intercepted channels
Review of attachment 8673372 [details] [diff] [review]:
-----------------------------------------------------------------
Josh should check on this. However, we want to move away from using the cache for the intercept feature soon. It shows to have drawbacks... like this one.
Attachment #8673372 -
Flags: review?(josh)
Reporter | ||
Comment 9•10 years ago
|
||
Yeah, I agree! It would be nice if we can talk about what to do in Orlando.
Comment 10•10 years ago
|
||
Comment on attachment 8673372 [details] [diff] [review]
Avoid bypassing opening a cache entry for possibly intercepted channels
Review of attachment 8673372 [details] [diff] [review]:
-----------------------------------------------------------------
Agreed. The more edge cases like these that we uncover, the stronger my desire to rewrite it all becomes.
Attachment #8673372 -
Flags: review?(josh) → review+
![]() |
||
Updated•10 years ago
|
Flags: needinfo?(honzab.moz)
You need to log in
before you can comment on or make changes to this bug.
Description
•