Bug 1214277 - Avoid bypassing opening a cache entry for possibly intercepted channels; r=mcmanus